--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,32 @@
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-regular.otf);
-  font-style: normal;
-  font-weight: normal;
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-italic.otf);
-  font-style: italic;
-  font-weight: 400;
-  /* el font-weight: 400; es igual que poner normal */
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-bold.otf);
-  font-style: normal;
-  font-weight: bold;
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-bold-italic.otf);
-  font-style: italic;
-  font-weight: 700;
-  /* font-weight: 700; es igual que poner bold */
-}
-
 :root {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  --gray40: #212121;
-  --gray30: #212429;
-  --gray20: #424242;
-  --gray10: #616161;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  --blue30: #232946;
+  --white20: #b8c1ec;
+  --white10: #fffffe;
   line-height: 24px;
-  color: var(--gray20);
+  color: var(--white20);
 }
 html {
   scroll-behavior: smooth;
 }
 body {
   margin: 0;
-}
-.place {
-  background-image: linear-gradient(
-      3.36deg,
-      #212325 -63.62%,
-      rgba(255, 255, 255, 0) 43.49%
-    ),
-    url("../images/patron-1.png");
-  /* background-repeat: no-repeat; */
-  /* background-position: left 30px bottom 50px; */
-  /* background-size: cover; */
-  /* block-size: 350px; */
-  block-size: 100px;
+  background: var(--blue30);
 }
 header {
+  color: var(--white10);
   inline-size: 208px;
   margin-block-start: 30px;
   padding-inline-start: 16px;
-  color: var(--gray10);
   font-size: 14px;
 }
 nav a {
-  color: var(--gray10);
+  color: var(--white20);
   text-decoration: none;
 }
 nav a:hover {
-  color: var(--gray40);
+  color: var(--white10);
 }
 p {
   margin-block: 16px;
@@ -86,34 +46,34 @@ details:last-of-type {
 nav ol li {
   margin-block: 16px;
 }
+h1,
+h2,
+h3 {
+  color: var(--white10);
+}
 
 h1 {
-  color: var(--gray40);
   font-size: 50px;
-  line-height: 70.31px;
-  font-weight: 400;
+  line-height: 78.02px;
   margin-block: 30px 16px;
-}
-h1 + p {
-  color: var(--gray40);
 }
 hr {
   border: 1px solid rgba(97, 97, 97, 0.2);
   margin-block: 40px;
 }
 h2 {
-  color: var(--gray40);
-  font-size: 32px;
-  /* 32px/16px=2rem a diferencia de em, rem toma el tamaño base al 
-  padre mas grande del DOM en este caso al html que tiene por defecto 16pxs*/
-  font-weight: normal;
-  line-height: 37.5px;
+  font-size: 40px;
+  line-height: 48.76px;
   margin-block: 40px 40px;
 }
 h3 {
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 28.13px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 39.1px;
+}
+span {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
 }
 .section img {
   margin-block: 40px 16px;
@@ -122,14 +82,11 @@ h3 {
 .section h3 {
   margin-block: 40px 24px;
   counter-increment: namberLvl3; /* incrementamos el contdor namberLvl3 */
-  position: relative;
   padding-block-end: 8px;
 }
 .setup h3 {
   margin-block: 16px 24px;
 }
-/* La numeracion con css para cada una de nuestras secciones */
-/* reseteamos el contador en cada seccion para que inicie desde 1*/
 .section {
   counter-reset: namberLvl3;
 }
@@ -147,29 +104,28 @@ h3 {
   inset-inline-start: 0;
   inset-block-end: 0;
 }
+section + p {
+  font-family: "Nunito", sans-serif;
+}
 blockquote + hr {
   display: none;
 }
 blockquote {
-  font-size: 24px;
-  line-height: 32px;
-  color: var(--gray20);
+  background: #d4939d;
   margin-block: 32px 64px;
-  margin-inline: 0;
-  border-inline-start: 4px solid var(--gray40);
-  padding-inline-start: 16px;
 }
-blockquote h3:last-of-type {
-  color: var(--gray10);
+blockquote h3 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  color: var(--blue30);
 }
 blockquote h3 + h3::before {
   content: "-";
 }
 pre {
-  background: #fec62e;
-  color: #000000;
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
+  color: var(--white10);
+  font-family: "Montserrat", sans-serif;
   padding-block: 40px;
   padding-inline: 40px;
   overflow: auto;
@@ -220,29 +176,35 @@ pre {
   margin-inline-start: 3px;
   position: relative;
 }
-
+.form h3 {
+  font-size: 24px;
+  line-height: 29.26px;
+  font-weight: 400;
+}
 form input {
-  font-family: "Roboto", sans-serif;
+  background-color: var(--blue30);
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 24px;
   outline: none;
   box-sizing: border-box;
-  border: 1px solid var(--gray10);
+  border: 1px solid var(--white10);
   border-radius: 90px;
   padding-block: 12px;
   padding-inline: 16px;
-  color: var(--gray20);
+  color: var(--white10);
   margin-block-end: 16px;
   block-size: 48px;
   inline-size: 100%;
 }
 form input::-webkit-input-placeholder {
-  color: var(--gray20);
+  color: var(--white10);
 }
 form input[type="submit"] {
   border: none;
-  color: white;
-  background: #000000;
+  font-weight: 700;
+  color: var(--blue30);
+  background: #eebbc3;
   /* position: absolute; */
   /* inline-size: 119px; */
   /* inset-inline-start: 516px; */
@@ -251,15 +213,16 @@ form input[type="submit"] {
   cursor: pointer;
 }
 footer {
-  background: var(--gray30);
+  background-color: #eebbc3;
   box-sizing: border-box;
   text-align: center;
   block-size: 174px;
   padding-block: 48px;
 }
-footer h2 {
-  color: white;
-  margin-block: 0;
+footer h3 {
+  font-weight: normal;
+  color: var(--blue30);
+  margin-block-start: 0;
   margin-block-end: 19px;
 }
 footer a {
@@ -357,7 +320,7 @@ footer img {
     margin: auto;
   }
   h1 {
-    font-size: 60px;
+    font-size: 64px;
     margin-block: 64px 16px;
   }
 }
