form terminado y responsive

--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ pre {
   font-size: 24px;
   line-height: 29.26px;
   font-weight: 400;
+  margin-block: 0;
 }
 form input {
   background-color: var(--blue30);
@@ -211,7 +212,7 @@ form input {
   padding-block: 12px;
   padding-inline: 16px;
   color: var(--white10);
-  margin-block-end: 16px;
+  margin-block-start: 16px;
   block-size: 48px;
   inline-size: 100%;
 }
@@ -249,19 +250,6 @@ footer img {
 
 /*Móviles en horizontal o tablets en vertical*/
 @media screen and (min-width: 776px) {
-  form {
-    margin-inline: 65px;
-  }
-  form input {
-    margin-inline-end: 16px;
-    inline-size: 280px;
-    margin-block-end: 0;
-  }
-  form input[type="submit"] {
-    position: absolute;
-    inline-size: 119px;
-    inset-inline-start: 550px;
-  }
 }
 /*Tablets en horizonal y escritorios normales*/
 @media screen and (min-width: 1024px) {
@@ -298,7 +286,7 @@ footer img {
     margin-block: 16px 164px;
   }
   .form {
-    margin-block: 40px 113px;
+    margin-block: 40px 80px;
   }
 }
 
