--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,29 @@ header {
   /* color: rgba(0, 0, 0, 0.5); */
   font-size: 14px;
 }
+.variantes {
+  color: var(--gray10);
+  margin-block-end: 104px;
+}
+.variantes p {
+  margin-block: 0;
+}
+.variantes a {
+  display: block;
+  margin-block: 8px;
+  padding: 8px;
+  color: var(--gray10);
+  text-decoration: none;
+}
+.variantes a:first-of-type {
+  margin-block-start: 16px;
+}
+.variantes a:nth-of-type(4) {
+  background-color: var(--gray40);
+  border-radius: 4px;
+  color: white;
+}
+
 nav a {
   color: var(--gray40);
   text-decoration: none;
@@ -359,8 +382,8 @@ footer img {
     inset-inline-end: -208px;
   }
   .header {
-    position: sticky;
-    inset-block-start: -35px;
+    /* position: sticky;
+    inset-block-start: -35px; */
   }
   .header-content {
     position: relative;
@@ -402,14 +425,10 @@ footer img {
     block-size: 350px;
   }
   header {
-    margin-block-start: 65px;
+    margin-block-start: 64px;
     padding-inline-start: 0;
     position: absolute;
     inset-inline-end: -208px;
-  }
-  .header {
-    position: sticky;
-    inset-block-start: -35px;
   }
   .header-content {
     position: relative;
