--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,28 @@ nav ol {
 nav ol li {
   margin-block: 16px;
 }
+.variantes {
+  color: var(--gray10);
+  margin-block-end: 104px;
+}
+.variantes p {
+  margin-block: 0;
+}
+.variantes a {
+  display: block;
+  margin-block: 8px;
+  padding: 8px;
+  color: var(--gray10);
+  text-decoration: none;
+}
+.variantes a:first-of-type {
+  margin-block-start: 16px;
+}
+.variantes a:nth-of-type(3) {
+  background-color: var(--gray40);
+  border-radius: 4px;
+  color: white;
+}
 nav details summary {
   font-weight: bold;
   cursor: pointer;
@@ -276,6 +298,26 @@ footer img {
 }
 /*Tablets en horizonal y escritorios normales*/
 @media screen and (min-width: 1024px) {
+  .place {
+    block-size: 250px;
+  }
+  header {
+    margin-block-start: 45px;
+    padding-inline-start: 0;
+    position: absolute;
+    inset-inline-end: -208px;
+  }
+  /* .header {
+  position: sticky;
+    inset-block-start: -35px;
+  } */
+  .header-content {
+    position: relative;
+  }
+  .wrapper {
+    margin-inline-end: 200px;
+  }
+
   h1 {
     font-size: 55px;
     margin-block: 45px 16px;
@@ -296,6 +338,21 @@ footer img {
 
 /*Escritorios muy anchos*/
 @media screen and (min-width: 1350px) {
+  .place {
+    block-size: 350px;
+  }
+  header {
+    margin-block-start: 64px;
+    padding-inline-start: 0;
+    position: absolute;
+    inset-inline-end: -208px;
+  }
+  .header-content {
+    position: relative;
+  }
+  .wrapper {
+    margin: auto;
+  }
   h1 {
     font-size: 60px;
     margin-block: 120px 16px;
